--- a/presentation/src/main/res/layout/item_event_right.xml
+++ b/presentation/src/main/res/layout/item_event_right.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="event"
-            type="kr.foorun.data.event.Event" />
+            type="kr.foorun.model.event.Event" />
 
         <variable
             name="viewModel"
