--- a/presentation/src/main/res/layout/fragment_map.xml
+++ b/presentation/src/main/res/layout/fragment_map.xml
@@ -20,7 +20,7 @@
             android:animateLayoutChanges="true"
             app:topAnimVisible="@{viewModel.visibleMainSearch}"
             android:layout_width="match_parent"
-            android:layout_height="187dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/gradient_bottom_28"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="73dp"
+                android:layout_marginTop="@dimen/search_bar_back_top_52"
                 android:layout_marginEnd="346.38dp"
                 android:layout_marginBottom="98.76dp"
                 android:src="@drawable/arrow_left"
@@ -44,7 +44,7 @@
                 android:layout_height="38dp"
                 android:onClick="@{() -> viewModel.navigateToSearch()}"
                 android:layout_marginStart="44dp"
-                android:layout_marginTop="62dp"
+                android:layout_marginTop="@dimen/search_bar_top_41dp"
                 android:layout_marginEnd="21dp"
                 android:layout_marginBottom="87dp"
                 android:src="@drawable/main_search"
