--- a/presentation/src/main/res/layout/fragment_article_search.xml
+++ b/presentation/src/main/res/layout/fragment_article_search.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="73dp"
+                android:layout_marginTop="@dimen/search_bar_back_top_52"
                 android:layout_marginEnd="346.38dp"
                 android:layout_marginBottom="11.76dp"
                 android:onClick="@{() -> viewModel.backClicked()}"
@@ -39,10 +39,10 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.SearchView
-                android:layout_width="310dp"
-                android:layout_height="38dp"
+                android:layout_width="@dimen/search_width"
+                android:layout_height="@dimen/search_height"
                 android:layout_marginStart="44dp"
-                android:layout_marginTop="62dp"
+                android:layout_marginTop="@dimen/search_bar_top_41dp"
                 android:layout_marginEnd="21dp"
                 android:background="@drawable/searchbar"
                 app:layout_constraintBottom_toBottomOf="parent"
