--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -41,5 +41,11 @@
     <dimen name="tag_item_margin_bottom_16">16dp</dimen>
     <dimen name="home_margin_start_25">25dp</dimen>
     <dimen name="home_item_event_height">276dp</dimen>
+    <dimen name="app_bar_top_padding_43">43dp</dimen>
+    <dimen name="app_bar_height_80">80dp</dimen>
+    <dimen name="search_bar_top_41dp">41dp</dimen>
+    <dimen name="search_bar_back_top_52">52dp</dimen>
+    <dimen name="search_width">310dp</dimen>
+    <dimen name="search_height">38dp</dimen>
 
 </resources>
