chore eventAdapter 뷰모델 분리작업

--- a/presentation/src/main/res/layout/item_event_right.xml
+++ b/presentation/src/main/res/layout/item_event_right.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="viewModel"
-            type="kr.foorun.uni_eat.feature.event.EventViewModel" />
+            type="kr.foorun.uni_eat.feature.event.EventAdapterViewModel" />
     </data>
 
     <LinearLayout
