--- a/presentation/src/main/res/navigation/event_nav.xml
+++ b/presentation/src/main/res/navigation/event_nav.xml
@@ -16,6 +16,11 @@
     <fragment
         android:id="@+id/eventDetailFragment"
         android:name="kr.foorun.uni_eat.feature.event.event_detail.EventDetailFragment"
-        android:label="EventDetailFragment" />
+        android:label="EventDetailFragment" >
+        <argument
+            android:name="@string/hide_bottom"
+            app:argType="boolean"
+            android:defaultValue="true" />
+    </fragment>
 
 </navigation>
