--- a/presentation/src/main/res/layout/fragment_article_entire.xml
+++ b/presentation/src/main/res/layout/fragment_article_entire.xml
@@ -69,10 +69,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:elevation="0dp"
-                android:src="@drawable/gps_fixed_light"
+                android:src="@drawable/pen"
                 android:backgroundTint="@color/search_tag_pick"
                 app:borderWidth="0dp"
-                app:maxImageSize="36dp"
+                app:maxImageSize="30dp"
                 app:fabCustomSize="60dp"
                 android:onClick="@{() -> viewModel.postClick()}"
                 android:layout_marginEnd="32dp"
