--- a/presentation/src/main/res/layout/fragment_event_detail.xml
+++ b/presentation/src/main/res/layout/fragment_event_detail.xml
@@ -14,16 +14,11 @@
         android:background="@color/white"
         tools:context="kr.foorun.uni_eat.feature.event.event_detail.EventDetailFragment">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="64dp"
-            android:text="@string/event"
-            android:textSize="23sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+       <kr.foorun.uni_eat.base.view.base.BaseBarConstraintView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           app:titleText="@string/article"
+           app:layout_constraintTop_toTopOf="parent"/>
 
         <kr.foorun.uni_eat.base.view.base.BaseTextView
             android:id="@+id/event_detail_TV"
