--- a/presentation/src/main/res/layout/fragment_event_sort_bottom_sheet.xml
+++ b/presentation/src/main/res/layout/fragment_event_sort_bottom_sheet.xml
@@ -48,7 +48,7 @@
             android:text="@string/event_sort_button"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:onClick="@{()->viewModel.confirmSortMehtod()}"/>
+            android:onClick="@{()->viewModel.confirmSortMethod()}"/>
 
     </LinearLayout>
 </layout>
