--- a/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
+++ b/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
@@ -8,6 +8,8 @@
         <attr name="android:textColor"/>
         <attr name="android:singleLine"/>
         <attr name="android:background"/>
+        <attr name="android:textSize"/>
+        <attr name="android:textColorHint"/>
         <attr name="defaultValue" format="string"/>
     </declare-styleable>
 </resources>
