--- a/presentation/src/main/res/layout/fragment_article_post.xml
+++ b/presentation/src/main/res/layout/fragment_article_post.xml
@@ -127,7 +127,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/horizon_line_view"/>
 
-                <kr.foorun.uni_eat.base.view.base.BaseEditTextView
+                <kr.foorun.uni_eat.base.view.base.BaseEditTextLayout
                     android:id="@+id/content_edit"
                     android:background="@color/invisible"
                     android:layout_width="match_parent"
@@ -136,7 +136,8 @@
                     android:singleLine="false"
                     android:scrollHorizontally="false"
                     android:inputType="textMultiLine"
-                    android:textColor="@color/gray3"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/gray3"
                     android:textSize="@dimen/text_size_large_15"
                     android:layout_marginStart="@dimen/margin_21"
                     android:layout_marginEnd="@dimen/margin_21"
